@@ -3,21 +3,6 @@ defined('BASEPATH') OR exit('No direct script access allowed');
 
 class Portfolio extends Application {
 
-	/**
-	 * Index Page for this controller.
-	 *
-	 * Maps to the following URL
-	 * 		http://example.com/index.php/welcome
-	 *	- or -
-	 * 		http://example.com/index.php/welcome/index
-	 *	- or -
-	 * Since this controller is set as the default controller in
-	 * config/routes.php, it's displayed at http://example.com/
-	 *
-	 * So any other public methods not prefixed with an underscore will
-	 * map to /index.php/welcome/<method_name>
-	 * @see https://codeigniter.com/user_guide/general/urls.html
-	 */
 	public function index($playerkey = null)
 	{
         // Set page info data
@@ -51,9 +36,9 @@ class Portfolio extends Application {
         else
         {
             $pInfo = new stdClass;
-            $pInfo->Player = "-";
-            $pInfo->Cash = "-";
-            $pInfo->Equity = "-";
+            $pInfo->Player = "Select a player";
+            $pInfo->Cash = "n/a";
+            $pInfo->Equity = "n/a";
             $playerInfo[0] = $pInfo;
         }
         $this->data['playerName'] = $playerInfo;
