@@ -1,5 +1,8 @@
 <?php
 
+/**
+ * The movements model
+ */
 class Movements extends MY_Model {
     // constructor
     function __construct() {
