@@ -1,5 +1,8 @@
 <?php
 
+/**
+ * The players model
+ */
 class Players extends MY_Model {
     // constructor
     function __construct() {
