@@ -1,5 +1,8 @@
 <?php
 
+/**
+ * The stocks model
+ */
  class Stocks extends MY_Model {
     // constructor
     function __construct() {
