@@ -1,5 +1,8 @@
 <?php
 
+/**
+ * The transactions model
+ */
  class Transactions extends MY_Model {
     // constructor
     function __construct() {
