@@ -1,4 +1,6 @@
 Date and Time                 Change detail
+Feb 19, 2016  [6:20am]        added comments to controllers and models
+Feb 19, 2016  [6:16am]        Added the players name to the nav bar when logged in
 Feb 18, 2016  [6:20am]        Styled home page
 Feb 17, 2016  [4:20pm]        models created and Home page tables added
 Feb 16, 2016  [6:32pm]        Added links for bootstrap(3.3.6) and jquery(1.12.0)
